# helpDesk_EDU

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: __init__.py  assistance.py  auth.py  knowledge_base.py  mobile.py  notifications.py  tickets.py  users.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  entities.py  enums.py
app/repositories/: __init__.py  articles.py  notifications.py  tickets.py  users.py
app/schemas/: __init__.py  articles.py  assistance.py  mobile.py  notifications.py  tickets.py
app/services/: __init__.py  articles.py  assistance.py  auth.py  notifications.py  tickets.py
app/web/: __init__.py  routes.py
app/web/templates/: base.html  dashboard.html  knowledge_base.html  login.html  notifications.html  portal.html  portal_ticket_form.html  portal_tickets.html  ticket_detail.html  ticket_form.html  tickets.html  workspace.html
docs/: architecture.md
tests/: test_helpdesk.py  test_layered_architecture.py
