[project]
name = "helpdesk-edu"
version = "0.1.0"
description = "A teachable FastAPI help-desk application"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2.6",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "jinja2>=3.1",
  "python-multipart>=0.0.12",
  "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
